--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "executable": "${workspaceFolder}/build/g4_experiment.elf",
             "device": "STM32G474xx",
             "stlinkPath": "ST-LINK_gdbserver.exe",
+            "stm32cubeprogrammer": "C:\\ST\\STM32CubeCLT_1.15.0\\STM32CubeProgrammer\\bin",
             "runToEntryPoint": "main",
             "svdFile": "${workspaceFolder}/STM32G474.svd"
         }
